Tested committing changes.

--- a/L2_Fundamentals_empty.ipynb
+++ b/L2_Fundamentals_empty.ipynb
@@ -63,7 +63,7 @@
         "id": "lH_D8fEwag3K"
       },
       "source": [
-        ""
+        "# This is to test whether I can save to GitHub and commit."
       ],
       "execution_count": null,
       "outputs": []
